--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -54,7 +54,7 @@
                     <li class="list">
                         {{burger_name}}
 
-                        <button id="devour" class="btn btn-success" data-id="{{id}}">
+                        <button class="btn btn-success devour" data-id="{{id}}">
                             <i class="fas fa-utensils"></i> devour it!
                         </button>
                     </li>
