--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -114,7 +114,7 @@ label {
     border-radius: 50px 50px 10px 10px;
 }
 #burgerInput {
-    color: #F80;;
+    color: #F80;
     font-weight: bolder;
     font-style: italic;
     border-radius: 25px;
