--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,9 +34,9 @@
         <!-- ((((((((((((input & submit))))))))))))  -->
         <form class="newForm">
             <div class="form-group">
-                <label for="burgerInput" class="hvr-icon-down wow fadeIn" data-wow-delay="0.4s">Customize Your Burger ↷</label><br>
-                <input type="text" id="burgerInput" class="wow fadeIn" data-wow-delay="0.2s" placeholder=" Hamburger" name="name"><br>
-                <button type="submit" id="submit" class="btn btn-warning wow fadeIn">
+                <label for="burgerInput" class="hvr-icon-down wow fadeInDown">Customize Your Burger ↷</label><br>
+                <input type="text" id="burgerInput" class="wow fadeIn" data-wow-delay="0.5s" placeholder=" Hamburger" name="name"><br>
+                <button type="submit" id="submit" class="btn btn-warning wow fadeInUp">
                     SU<i class="fas fa-hamburger"></i>MIT
                 </button>
             </div>
