--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,12 +19,14 @@
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Shojumaru" rel="stylesheet">
     <!-- ============================ Script =============================== -->
-    <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="/assets/js/burger_main.js"></script>
     <!-- Link and activate WOW.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
     <script>new WOW().init();</script>
+    <!-- sweet alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="/assets/js/burger_main.js"></script>
 </head>
 
 <body>
